--- a/.github/workflows/christopher.yml
+++ b/.github/workflows/christopher.yml
@@ -1,60 +1,25 @@
-name: Christopher Workflow
+name: Build Angular
+
 on:
     push:
-        branches: [main]
-jobs:
-    buildApp:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              run: |
-                  echo "Checking out" >> file.txt
-            - name: installer Node
-              run: |
-                  echo "Installing Node" >> file.txt
-            - name: installer Angular
-              run: |
-                  echo "Installing Angular" >> file.txt
-            - name:  telecharger des dependances
-              run: |
-                  echo "telecharger des dependances" >> file.txt
-            - name:  build
-              run: |
-                  echo "build" >> file.txt
-    TesterAPP:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              run: |
-                  echo "Checking out" >> file.txt
-            - name: installer Node
-              run: |
-                  echo "Installing Node" >> file.txt
-            - name: installer Angular
-              run: |
-                  echo "Installing Angular" >> file.txt
-            - name:  telecharger des dependances
-              run: |
-                  echo "telecharger des dependances" >> file.txt
-            - name:  build
-              run: |
-                  echo "build" >> file.txt
-    DeployerApp:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              run: |
-                  echo "Checking out" >> file.txt
-            - name: installer Node
-              run: |
-                  echo "Installing Node" >> file.txt
-            - name: installer Angular
-              run: |
-                  echo "Installing Angular" >> file.txt
-            - name:  telecharger des dependances
-              run: |
-                  echo "telecharger des dependances" >> file.txt
-            - name:  build
-              run: |
-                  echo "build" >> file.txt
+        branches:
+            - main
 
+jobs:
+    build:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4.1.1
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 14
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Build Angular
+              run: npm run build
